--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -4,7 +4,7 @@ PORT=3333
 API_URL=/api/v1
 
 # 🧩 Base de datos MongoDB
-CONNECTION_STRING=
+CONNECTION_STRING= mongodb+srv://rarojasag:Anyway_67357@clusterprueba.noldk14.mongodb.net/SAPCAP?retryWrites=true&w=majority&appName=ClusterPrueba
 #CONNECTION_STRING = 
 
 # 💡 Clave de Gemini IA (solo si usas IA)
